--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "devDependencies": {
     "@angular/cli": "^8.1.0",
+    "express": "^4.17.1",
     "rxjs": "^6.5.2"
   },
   "dependencies": {
-    "@reactivex/rxjs": "^6.5.2"
+    "@reactivex/rxjs": "^6.5.2",
+    "express-handlebars": "^3.1.0"
   }
 }
